# VIsionBot

./: .gitignore  ACTION_QUEUE.md  ADVANCED_LEDGER_FEATURES.md  AGENT_SYSTEM_OVERVIEW.md  COMMAND_LEDGER.md  CONFIG_README.md  MANIFEST.in  MENU_STRUCTURE.md  POST_ACTION_HOOKS.md  README.md  REFACTORING_SUMMARY.md  REF_COMMAND_IDS.md  SCROLL_TRACKING.md  SETUP_GUIDE.md  SIMPLE_IF_GOAL.md  SUMMARY_COMMAND_IDS.md  TERMINOLOGY.md  TESTING_TAB_DETECTION.md  __init__.py  action_executor.py  action_ledger.py  action_queue.py  action_result.py  agent_dummy.py  agent_dummy_with_middleware.py  agent_extraction_example.py  agent_simple.py  ai_utils.py  application_filler.py  bot_config.py  bot_utils.py  browser_provider.py  browser_provider_examples.py  command_ledger.py  config.py  config_examples.py  cookie_handler.py  demo_command_ledger.py  demo_ledger_features.py  demo_post_action_hook.py  (+52 more)
.agent/rules/: documentation-rules.md
.cursor/projects/Users-chris-ineg-Desktop-browser-vision-bot/agent-tools/: uncalled_functions_summary.txt
.cursor/rules/: documentation-rule.mdc
agent/: __init__.py  agent_context.py  agent_controller.py  agent_iteration_decision.py  agent_result.py  combined_decision.py  completion_contract.py  mini_goal_manager.py  reactive_goal_determiner.py  stuck_detector.py  sub_agent_controller.py  sub_agent_result.py  task_result.py
browser_vision_bot/: __init__.py
element_detection/: __init__.py  element_detector.py  overlay_manager.py
examples/: act_function_config_example.py
goals/: CREATING_CONDITIONS.md  __init__.py  back_goal.py  base.py  click_goal.py  condition_engine.py  condition_utils.py  contextual_command_engine.py  date_goal.py  defer_goal.py  element_analyzer.py  extract_goal.py  for_goal.py  for_models.py  form_field_goal.py  form_goal.py  forward_goal.py  history_utils.py  if_goal.py  monitor.py  navigation_goal.py  page_functions.py  press_goal.py  scroll_goal.py  select_goal.py  target_resolver.py  type_goal.py  while_goal.py
handlers/: __init__.py  datetime_handler.py  select_handler.py  upload_handler.py
middlewares/: __init__.py  caching.py  cost_tracking.py  error_handling_middleware.py  human_in_loop.py  logging_middleware.py  metrics.py  retry.py
models/: __init__.py  core_models.py  intent_models.py
planner/: __init__.py  plan_generator.py
playground/: app.py  test_goals.py
tab_management/: README.md  TAB_DETECTION.md  __init__.py  tab_decision_engine.py  tab_info.py  tab_manager.py
tests/: __init__.py  conftest.py  test_semantic_targets.py  test_sub_agents.py
tests/integration/: __init__.py  select_fixtures.html  selector_coordinates_fixtures.html  test_agent_field_handling.py  test_agent_select_vs_click.py  test_select_auto_convert_to_click.py  test_select_detection.py  test_select_handler_fixture.py  test_selector_coordinates.py  test_smart_field_handling.py  test_text_input_clearing.py  text_input_fixtures.html
tests/unit/: test_act_function_config.py  test_action_executor_scroll.py
utils/: __init__.py  bot_logger.py  command_parser.py  context_guard.py  coordinate_utils.py  element_analyzer.py  event_logger.py  execution_timer.py  intent_parsers.py  memory_store.py  multi_command_parser.py  overlay_description.py  page_utils.py  select_option_utils.py  selector_utils.py  semantic_targets.py  vision_resolver.py  visualization_utils.py
window_mgmt/: window_adjustment.py
