[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-vision-bot"
version = "0.1.0"
description = "A powerful, vision-based web automation framework that uses AI to interact with web pages like a human would"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "BrowserVisionBot Contributors"}
]
keywords = ["automation", "browser", "ai", "vision", "playwright", "web-scraping", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "google-generativeai>=0.3.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "InquirerPy>=0.3.4",
    "Flask>=2.2.0",
    "openai>=1.40.0",
    "google-genai>=0.3.0",
    "playwright-stealth>=1.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/INEG-LTD/VIsionBotbot"
Documentation = "https://github.com/INEG-LTD/VIsionBot#readme"
Repository = "https://github.com/INEG-LTD/VIsionBot"
Issues = "https://github.com/INEG-LTD/VIsionBot/issues"

[tool.setuptools]
# Automatically discover all packages (subdirectories with __init__.py)
# Root-level modules will be included when installed in editable mode
packages = { find = {} }

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

# For editable installs, the root directory becomes the package root
# This allows imports like "from vision_bot import BrowserVisionBot" to work
[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
