[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser_vision_bot"
version = "0.1.0"
description = "Vision-based web automation framework using Playwright and AI."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "BrowserVisionBot Contributors" }
]
keywords = ["automation", "browser", "ai", "vision", "playwright", "web-scraping", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "setuptools>=65.0.0",
    "google-generativeai>=0.3.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "InquirerPy>=0.3.4",
    "Flask>=2.2.0",
    "openai>=1.40.0",
    "google-genai>=0.3.0",
    "playwright-stealth>=1.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/INEG-LTD/VIsionBotbot"
Documentation = "https://github.com/INEG-LTD/VIsionBot#readme"
Repository = "https://github.com/INEG-LTD/VIsionBot"
Issues = "https://github.com/INEG-LTD/VIsionBot/issues"

[tool.setuptools]
# Discover subpackages (directories with __init__.py)
packages = { find = {} }
# Install root-level modules as top-level imports (e.g., vision_bot)
py-modules = [
    "vision_bot",
    "bot_config",
    "browser_provider",
    "action_executor",
    "action_ledger",
    "action_queue",
    "action_result",
    "agent_dummy",
    "ai_utils",
    "command_ledger",
    "error_handling",
    "gif_recorder",
    "interaction_deduper",
    "middleware",
    "session_tracker",
    "vision_utils",
    "command_parser",
]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
